hphp/hack/test/typecheck/reactive/rx_if_implements35.php.exp
File "rx_if_implements35.php", line 15, characters 7-7:
Class B does not correctly implement all required members  (Typing[4203])
File "rx_if_implements35.php", line 15, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "rx_if_implements35.php", line 17, characters 26-26:
Member f has the wrong type
File "rx_if_implements35.php", line 10, characters 26-26:
This function is conditionally reactive (condition type: \Rx).
File "rx_if_implements35.php", line 17, characters 26-26:
This function is non-reactive.
